Update 0165 with lots of hardening details

--- a/0161-2023-10-17.md
+++ b/0161-2023-10-17.md
@@ -30,7 +30,7 @@ NOTE: This day was a blitz, so the notes below are much less organised than I'd 
 
 # Notes
 
-*   Spoke with Ellen, Pawel, Matt about chipIgnite. Might have to drop 
+*   Spoke with Ellen, Pawel, Matt about chipIgnite. Might have to drop analog DAC goal.
 *   If I can't get analog working, then make sure there is a LA 'mode' or debug control or whatever that can just select what 3 digital outputs we want: RGB111? G3?
 *   The host controller could update textures in an SPI PSRAM by double-buffering it, i.e. for the portion of each line where raybox-zero is not mastering the Texture SPI memory, and for the whole of VBLANK, write new texture data into a second memory region, and then send an SPI signal to raybox-zero at the end of the frame to say "flip this texture MSB now".
 *   de0nano wrapper for raybox-zero does NOT wire up reg SPI!
@@ -59,7 +59,7 @@ NOTE: This day was a blitz, so the notes below are much less organised than I'd 
     *   **This totals 18... out of 30, there are only 12 left.**
     *   Ellen needs 8 digital that CAN be muxed??
     *   I've worked out that my ideal external pin count is 3 analog and 10 digital. This includes CLK:
-        *   If 12 was still the hard limit, then maybe CLK can be internal (where would it come from?)
+        *   If 12 was still the hard limit, then maybe CLK can be internal (where would it come from? I think it can come from the Caravel PLL/DLL)
         *   Otherwise, I could drop the debug pin and let the LA switch it on either of the SYNC pins.
 *   [Caravel 38 `mprj_io` pins](https://caravel-harness.readthedocs.io/en/latest/pinout.html):
     *   First 8 should be reserved for general system functions (SoC and housekeeping)
