--- a/0165-2023-10-24.md
+++ b/0165-2023-10-24.md
@@ -23,13 +23,208 @@
 
 ## Steps to harden raybox-zero
 
-1.  Make sure we're in the `ew` branch
-2.  Check `config.tcl`
+1.  Use the MPW8 VM (since my other ASIC-Ubuntu-2204 VM is not yet verified). Currently it has 16GB RAM and 4 CPUs.
+2.  `cd $OPENLANE_ROOT/designs/raybox-zero` (repo is alredy cloned in there, with `config.tcl` in that dir).
+3.  Make sure we're in the `ew` branch, and `git pull`
+4.  Check `config.tcl`
+    *   I added this to use the 4 CPUs assigned to my VM:
+        ```tcl
+        set ::env(ROUTING_CORES) 4
+        set ::env(KLAYOUT_XOR_THREADS) 4
+        ```
+    *   Should we be using `set ::env(FP_PIN_ORDER_CFG) $script_dir/pin_order.cfg` ...?
+    *   Only other thing I'm not sure about is:
+        ```tcl
+        # don't put clock buffers on the outputs, need tristates to be the final cells
+        set ::env(PL_RESIZER_BUFFER_OUTPUT_PORTS) 0
+        ```
+5.  ```bash
+    cd ../..
+    make mount
+    # ...then in docker...
+    time ./flow.tcl -design raybox-zero
+    ```
+    Time it takes: 9~10 minutes (12~13 with 2 cores instead of 4).
+6.  ```
+    [WARNING]: There are max fanout violations in the design at the typical corner. Please refer to 'designs/raybox-zero/runs/RUN_2023.10.24_06.24.38/reports/signoff/25-rcx_sta.slew.rpt'.
+    [INFO]: There are no hold violations in the design at the typical corner.
+    [INFO]: There are no setup violations in the design at the typical corner.
+    [SUCCESS]: Flow complete.
+    ```
+
+    Max fanout warnings reported in `reports/signoff/25-rcx_sta.slew.rpt`:
+    ```
+    Pin                                   Limit Fanout  Slack
+    ---------------------------------------------------------
+    clkbuf_leaf_0_tex_sclk/X                 10     19     -9 (VIOLATED)
+    clkbuf_leaf_13_tex_sclk/X                10     18     -8 (VIOLATED)
+    clkbuf_leaf_1_tex_sclk/X                 10     16     -6 (VIOLATED)
+    clkbuf_leaf_2_tex_sclk/X                 10     16     -6 (VIOLATED)
+    clkbuf_leaf_32_tex_sclk/X                10     16     -6 (VIOLATED)
+    clkbuf_leaf_22_tex_sclk/X                10     15     -5 (VIOLATED)
+    clkbuf_leaf_33_tex_sclk/X                10     14     -4 (VIOLATED)
+    clkbuf_leaf_74_tex_sclk/X                10     14     -4 (VIOLATED)
+    clkbuf_3_4__f_tex_sclk/X                 10     13     -3 (VIOLATED)
+    clkbuf_leaf_16_tex_sclk/X                10     13     -3 (VIOLATED)
+    clkbuf_leaf_40_tex_sclk/X                10     13     -3 (VIOLATED)
+    clkbuf_leaf_49_tex_sclk/X                10     13     -3 (VIOLATED)
+    clkbuf_leaf_69_tex_sclk/X                10     13     -3 (VIOLATED)
+    clkbuf_leaf_72_tex_sclk/X                10     13     -3 (VIOLATED)
+    clkbuf_3_6__f_tex_sclk/X                 10     12     -2 (VIOLATED)
+    clkbuf_leaf_15_tex_sclk/X                10     12     -2 (VIOLATED)
+    clkbuf_leaf_61_tex_sclk/X                10     12     -2 (VIOLATED)
+    clkbuf_leaf_68_tex_sclk/X                10     12     -2 (VIOLATED)
+    _08966_/X                                10     11        (VIOLATED)
+    _09077_/X                                10     11        (VIOLATED)
+    _09165_/X                                10     11        (VIOLATED)
+    _09186_/X                                10     11        (VIOLATED)
+    _09783_/X                                10     11        (VIOLATED)
+    _12060_/X                                10     11        (VIOLATED)
+    clkbuf_3_5__f_tex_sclk/X                 10     11        (VIOLATED)
+    clkbuf_leaf_23_tex_sclk/X                10     11        (VIOLATED)
+    clkbuf_leaf_37_tex_sclk/X                10     11        (VIOLATED)
+    clkbuf_leaf_66_tex_sclk/X                10     11        (VIOLATED)
+    input4/X                                 10     11        (VIOLATED)
+    ```
+    Assumed to be OK for now, based on past advice.
+7.  Worst antenna violator in `logs/signoff/34-antenna.log` is 677/400.
+8.  Just be wary about:
+    ```
+    [STEP 14]
+    [INFO]: Running Global Routing (log: designs/raybox-zero/runs/RUN_2023.10.24_06.24.38/logs/routing/14-global.log)...
+    [INFO]: Starting OpenROAD Antenna Repair Iterations...
+    [INFO]: Starting antenna repair iteration 1 with 2 violations...
+    [INFO]: [Iteration 1] Failed to reduce antenna violations (2 -> 2), stopping iterations...
+    ```
+9.  ```
+    $ summary.py --design raybox-zero --full-summary
+                            design : /openlane/designs/raybox-zero
+                       design_name :    top_ew_algofoogle
+                            config : RUN_2023.10.24_06.24.38
+                       flow_status :       flow completed
+                     total_runtime :          0h12m14s0ms
+                    routed_runtime :            0h9m4s0ms
+             (Cell/mm^2)/Core_Util :    37114.28571428572
+                      DIEAREA_mm^2 :                 0.49
+                      CellPer_mm^2 :    18557.14285714286
+                       OpenDP_Util :                19.94
+              Peak_Memory_Usage_MB :              1482.54
+                        cell_count :                 9093
+    ...
+    ```
+    This tells us `OpenDP_Util : 19.94`, i.e. only ~20% utilisation. Heaps of room!
+10. The TT GHA (via tt_tool.py) gives a good summary of cell counts by type, e.g. it lists Flip Flops. This looks complicated, though, so I instead just opened the GDS in KLayout, looked for the pattern in the names of cells I was interested in, and then grepped for those names. For example:
+    ```
+    $ fgrep sky130_fd_sc_hd__dfxtp runs/RUN_2023.10.24_06.24.38/results/final/verilog/gl/top_ew_algofoogle.v | wc -l
+    994
+    ```
+    That count of DFFs ([dfxtp](https://skywater-pdk.readthedocs.io/en/main/contents/libraries/sky130_fd_sc_hd/cells/dfxtp/README.html)) seems higher than I expected, but OK. 384 of them are the texture buffer.
+
+    This info can also be obtained by searching backwards in the file `runs/*/logs/synthesis/1-synthesis.log` for `Printing statistics` (it appears right at the end).
+
+    In that same file, this part is also interesting, in that one of the DFF numbers (`$_DFFE_NP_`, i.e. [**D** **F**lip **F**lop, **N**egative clock edge triggered, with **P**ositive clock-enable](https://yosyshq.readthedocs.io/projects/yosys/en/latest/CHAPTER_CellLib.html#tab-celllib-gates-dffe)) is 384, which is the number of addressable bits in the texture buffers:
+
+    ```
+    24. Printing statistics.
+
+    === top_ew_algofoogle ===
+
+       Number of wires:              11463
+       Number of wire bits:          12670
+       Number of public wires:         107
+       Number of public wire bits:    1195
+       Number of memories:               0
+       Number of memory bits:            0
+       Number of processes:              0
+       Number of cells:              12426
+         $_ANDNOT_                    3013
+         $_AND_                        243
+         $_DFFE_NP_                    384
+         $_DFFE_PP_                    320
+         $_DFF_P_                       31
+         $_MUX_                       1092
+         $_NAND_                       210
+         $_NOR_                       1265
+         $_NOT_                        656
+         $_ORNOT_                      656
+         $_OR_                        1448
+         $_SDFFCE_PN0P_                  8
+         $_SDFFCE_PP0P_                  1
+         $_SDFFE_PN0N_                  10
+         $_SDFFE_PN0P_                 154
+         $_SDFFE_PN1P_                  32
+         $_SDFFE_PP0N_                  16
+         $_SDFF_PN0_                    27
+         $_SDFF_PP0_                    11
+         $_XNOR_                       857
+         $_XOR_                       1992
+    ```
+11. `./flow.tcl -design raybox-zero -tag RUN_2023.10.24_09.44.55 -gui`
+
+
+## Steps to harden better
+
+*   Implement `debug_sel` stuff, inc. for dealing with low pin counts.
+*   Consider getting rid of clock gate -- it might break CTS or at least STA.
+*   Look at the method Matt advises for wrapped projects. This should include how to name signals, how to implement the safety tristates, oebs, LA pins, and maybe also the clock...?
+*   Talk to Matt!
+*   Call the reset lines `reset_xnor_a` and `reset_xnor_b`? In other words, "If these are the same, reset is asserted; if these differ, there is no reset".
+*   Implement more test signals (LA).
 
 
 # Next steps
 
-*   ...TBD...
+*   Stuff to ask Matt:
+    *   Check this option:
+        ```tcl
+        # don't put clock buffers on the outputs, need tristates to be the final cells
+        set ::env(PL_RESIZER_BUFFER_OUTPUT_PORTS) 0
+        ```
+    *   Find out: Which version of OpenLane should I be using?
+    *   How to tell everyone which pins of my macro I want wired up to pads?
+*   Try testing `top_ew_algofoogle` inside `de0nano` wrapper instead of `tt05_top.v` -- or have an option to test both. We could have a separate TOP for each, and switch the top module selection inside the Quartus project.
+
+# EW pin allocation
+
+According to Ellen's chart:
+
+![Ellen's pin allocation](i/0165-ew-pins.png)
+
+It should be OK for me to get 8 digital IOs and 1 analog. Interpreting this chart, using *zero-based* numbering for the Caravel IOs:
+*   IO[37:36] are reserved by John. Not sure why yet.
+*   IO[35:27] are Ellen's digital pins.
+*   IO[26:19] are 8 digital for Anton.
+*   IO[18] is 1 analog for Anton (could change to digital if I can't get my DAC design done) -- for me, this would be Caravel's `analog_io[11]`, I think.
+*   IO[17:12] are 6 analog for Pawel.
+*   IO[11:8] are 4 analog for Ellen.
+*   IO[7:0] are reserved for SoC/Housekeeping.
+*   Pins with asterisks could potentially be shared/muxed:
+    *   2 analog.
+    *   4 digital.
+
+NOTE: I suspect I could swap some of my digital pins for analog, if I wanted.
+
+Here's what I can do with these pads:
+*   Pads I MUST have in order to generate a display:
+    *   HSYNC
+    *   VSYNC
+    *   1 'colour' channel (could be black/white)
+*   Pads I MUST have in order to access minimal SPI:
+    *   /CS
+    *   SCLK
+    *   io0 -- technically can use just this one, in QSPI mode, but reading just 1 bit out of each nibble only.
+*   Remaining: 3
+*   Just using the 9 total I'm already allocated:
+    *   Common to all options:
+        *   CLK is an internal Caravel clock signal option.
+        *   reset_xnor_a/b can be hard-wired to LA.
+        *   ena from LA, too -- **abandon it maybe?**
+        *   
+    *   Option A:
+        
+
+
+
 
 
 # SPI glitching yesterday
