--- a/tips/2310C.md
+++ b/tips/2310C.md
@@ -2,9 +2,11 @@
 
 These are just notes for myself: Checks I need to remember to do to be sure my chipIgnite submission is good to go...
 
+*   Which version of OpenLane should I be using?
 *   Look for antenna violations: `(VIOLATED)`
 *   Check setup/hold margins
 *   Regular simulation
+*   Caravel firmware
 *   GL simulation
 *   Account for every input, output, and oeb
 *   Make sure my `oeb`s match the polarity of the intended target. Matt prefers 1=output, Caravel has a mix of 0=out and 1=out.
@@ -12,4 +14,7 @@ These are just notes for myself: Checks I need to remember to do to be sure my c
 *   Look at GDS in KLayout and make sure every pin is wired up sensibly
 *   Check CTS
 *   Make sure we're using correct directives in `config.tcl`
-*   Make sure RESET definitely suspends all switching, even if we still have a clock coming in. This is to make sure we don't create noise for other designs on the chip (esp. analog ones).
+*   Make sure RESET definitely suspends **all switching**, even if we still have a clock coming in. This is to make sure we don't create noise for other designs on the chip (esp. analog ones).
+*   Implement safe reset lock using XOR method via LA.
+*   Work out correct clock source. Is it `user_clock2`? Make sure `CLOCK_PORT` and `CLOCK_NET` are set correctly!
+*   Check `FP_PIN_ORDER_CFG`
