--- a/tips/2310C.md
+++ b/tips/2310C.md
@@ -9,7 +9,7 @@ These are just notes for myself: Checks I need to remember to do to be sure my c
 *   Caravel firmware
 *   GL simulation
 *   Account for every input, output, and oeb
-*   Make sure my `oeb`s match the polarity of the intended target. Matt prefers 1=output, Caravel has a mix of 0=out and 1=out.
+*   Make sure my `oeb`s match the polarity of the intended target. Matt prefers 1=output, Caravel has a mix of 0=out and 1=out. Check this (and *actual* direction) for both LA and IOs.
 *   Scour `logs/synthesis/1-synthesis.log` for warnings/errors
 *   Look at GDS in KLayout and make sure every pin is wired up sensibly
 *   Check CTS
@@ -18,3 +18,6 @@ These are just notes for myself: Checks I need to remember to do to be sure my c
 *   Implement safe reset lock using XOR method via LA.
 *   Work out correct clock source. Is it `user_clock2`? Make sure `CLOCK_PORT` and `CLOCK_NET` are set correctly!
 *   Check `FP_PIN_ORDER_CFG`
+*   No logic in UPW level!
+*   Make sure no IO double-ups (typos)
+*   Make sure nothing UNassigned... check for all assignments, ranges, counts, even if otherwise unused.
