0167: More prep for chipIgnite

--- a/0166-2023-10-26.md
+++ b/0166-2023-10-26.md
@@ -52,6 +52,7 @@
     *   Points for discussion:
         *   Pin placement: My IOs on the same side where they will be needed? Or someone can just mirror my macro.
         *   Sharing stuff: Digital only? Inputs only? What about analog?
+        *   Can our designs *simply share* digital *inputs* such that they don't need a mux? i.e. my design needs up to 3 digital inputs, and so does Ellen's, so can those drive both of our designs simultaneously, especially since our designs are otherwise independent?
         *   GPIO config defaults
         *   Does it matter which LA numbers I use?
         *   Can I use the ['user maskable interrupt signals'](https://github.com/efabless/spm_user_project_wrapper/blob/751ca75601499ad06338362dc4621cc0b7261426/verilog/rtl/user_project_wrapper.v#L77-L78) (`user_irg[2:0]`)? I could use hblank and vblank outputs.
