--- a/tips/2310C.md
+++ b/tips/2310C.md
@@ -9,6 +9,9 @@ These are just notes for myself: Checks I need to remember to do to be sure my c
 *   Caravel firmware
 *   GL simulation
 *   Account for every input, output, and oeb
+*   Implement `la_oenb` check: i.e. if the design senses an `la_oenb==1` on something, that implies the design is meant to provide the output back to VexRisc. However, we expect all of them to be inputs into our design, so `la_oenb==1` would mean misconfiguration, so our respective inputs would be floating and potentially chaotic... we could instead detect this case and just mux the respective LA to be 0.
+    *   NOTE: This might not be necessary. From looking at tests where LA lines are set to be inputs (into VexRisc), it appears `la_data_in` switches to 0 anyway.
+*   Pay attention to [setting `io_oeb[*]` for analog pins](https://web.open-source-silicon.dev/t/14135562/u017x0nm2e7-i-see-digital-io-mprj-io-pins-are-0-to-37-index-#da76de78-afe4-46a4-9daa-ffd132122d6d)
 *   Make sure my `oeb`s match the polarity of the intended target. Matt prefers 1=output, Caravel has a mix of 0=out and 1=out. Check this (and *actual* direction) for both LA and IOs.
 *   Scour `logs/synthesis/1-synthesis.log` for warnings/errors
 *   Look at GDS in KLayout and make sure every pin is wired up sensibly
