Prior updates to 0165; working out pads

--- a/0165-2023-10-24.md
+++ b/0165-2023-10-24.md
@@ -161,6 +161,10 @@
     ```
 11. `./flow.tcl -design raybox-zero -tag RUN_2023.10.24_09.44.55 -gui`
 
+Other findings:
+
+*   Q12.12 only increases area from ~20% to ~24%. At this rate, we could drop to 450x450um and easily fit within 60% util. Therefore, should we try a map RAM?
+
 
 ## Steps to harden better
 
@@ -174,7 +178,15 @@
 
 # Next steps
 
+*   Get rid of the full 24-bit RGB. We won't use it anyway? Still nice to keep in SOME extra bits if we want to try DACs.
+*   Prepare a spec for Ellen:
+    *   Which pins of mine are ins, outs, or bidir
+    *   Include spec for clock, LA, and how the reset lock works
+    *   List the ones I most want hooked up
+    *   List the ones I would *like* hooked up if we can mux
+*   Implement top-level debug stuff.
 *   Stuff to ask Matt:
+    *   What's wrong with `mprj_io[37:36]`?
     *   Check this option:
         ```tcl
         # don't put clock buffers on the outputs, need tristates to be the final cells
@@ -182,6 +194,7 @@
         ```
     *   Find out: Which version of OpenLane should I be using?
     *   How to tell everyone which pins of my macro I want wired up to pads?
+    *   What names to use for pins?
 *   Try testing `top_ew_algofoogle` inside `de0nano` wrapper instead of `tt05_top.v` -- or have an option to test both. We could have a separate TOP for each, and switch the top module selection inside the Quartus project.
 
 # EW pin allocation
@@ -209,22 +222,153 @@ Here's what I can do with these pads:
     *   HSYNC
     *   VSYNC
     *   1 'colour' channel (could be black/white)
-*   Pads I MUST have in order to access minimal SPI:
-    *   /CS
-    *   SCLK
-    *   io0 -- technically can use just this one, in QSPI mode, but reading just 1 bit out of each nibble only.
-*   Remaining: 3
-*   Just using the 9 total I'm already allocated:
+*   Pads I MUST have in order to access minimal texture SPI:
+    *   /CS (tex_csb)
+    *   SCLK (tex_sclk)
+    *   io0 (tex_out0/tex_in[0]) -- technically can use just this one, in QSPI mode, but reading just 1 bit out of each nibble only.
+*   **Remaining: 3**, unless we can mux.
+*   **If just using the 9 total I'm already allocated:**
+    *   I'm actually only using 3 of the 4 QSPI bits, so at most 2 more are needed.
     *   Common to all options:
         *   CLK is an internal Caravel clock signal option.
-        *   reset_xnor_a/b can be hard-wired to LA.
-        *   ena from LA, too -- **abandon it maybe?**
-        *   
-    *   Option A:
-        
+        *   tex_oeb is an internal signal.
+        *   The rest are signals that can be driven internally by LA:
+            *   reset_xnor_a/b
+            *   ena -- **abandon it maybe?**
+            *   vec_csb/sclk/mosi
+            *   reg_csb/sclk/mosi
+            *   debug_sel
+            *   debug_overlay
+            *   trace_debug??
+            *   mode
+            *   Other 'probes' in the design, **e.g. make sure ALL outputs are available at LA pins so we can slow the design down and inspect each one.**
+    *   Option A, easiest:
+        *   Keep core design as-is
+        *   Add on tex SPI io[2:1] (2 more pads)
+        *   Add on 1 extra selectable output
+        *   Overall pad mapping:
+            | Pad | Dir | Function              |
+            |----:|:---:|-----------------------|
+            |   1 | I/O | tex_io[0] **(bidir)** |
+            |   2 |  In | tex_io[1]             |
+            |   3 |  In | tex_io[2]             |
+            |   4 | Out | tex_csb               |
+            |   5 | Out | tex_sclk              |
+            |   6 | Out | hsync_n               |
+            |   7 | Out | vsync_n               |
+            |   8 | Out | gpout[0]              |
+            |   9 | Out | gpout[1]              |
+        *   **Use LA internally to select** which outputs we get via `gpout[1:0]`. Either could be one of:
+            *   R, G, or B, bit 1 or 0.
+            *   clk
+            *   clk/2
+            *   clk/4
+            *   Vec or Reg SPI signals
+            *   hpos bit 0..9
+            *   vpos bit 0..9
+            *   tex_oeb0
+            *   o_hblank
+            *   o_vblank
+    *   Option B, harder:
+        *   Have 3 selectable outputs, working as above. Enough to get RGB111 colour.
+        *   Add tex SPI io[1], and modify tex SPI read logic to use io[1:0] but pack colour data differently so we can load RGB222 bits in pairs instead of quads. This would require that we do 64*6/2 reads total (plus at least 1 extra state for SPI reset, but that could probably happen on the wrap-around): 192 clocks. 192 is 32 over 160 limit, but we can blank out the left-hand 32 and right-hand 32 pixels from the main display, reducing it from 640 to 576 (and keeping it centred).
+        *   Overall pad mapping:
+            | Pad | Dir | Function              |
+            |----:|:---:|-----------------------|
+            |   1 | I/O | tex_io[0] **(bidir)** |
+            |   2 |  In | tex_io[1]             |
+            |   3 | Out | tex_csb               |
+            |   4 | Out | tex_sclk              |
+            |   5 | Out | hsync_n               |
+            |   6 | Out | vsync_n               |
+            |   7 | Out | gpout[0]              |
+            |   8 | Out | gpout[1]              |
+            |   9 | Out | gpout[2]              |
+    *   Option C, hardest:
+        *   Have tex_io[1:0] reading bits for just 2 of 3 colour channels.
+        *   Have just 1 gpout.
+        *   Have 2 analog (DAC) outs -- fixed function.
+        *   Overall pad mapping:
+            | Pad | Dir    | Function              |
+            |----:|:------:|-----------------------|
+            |   1 |   I/O  | tex_io[0] **(bidir)** |
+            |   2 |    In  | tex_io[1]             |
+            |   3 |   Out  | tex_csb               |
+            |   4 |   Out  | tex_sclk              |
+            |   5 |   Out  | hsync_n               |
+            |   6 |   Out  | vsync_n               |
+            |   7 |   Out  | gpout[0]              |
+            |   8 | Analog | analog_out[0]         |
+            |   9 | Analog | analog_out[1]         |
+*   **From my reading of Ellen's notes, there are potentially 4 more digital *inputs* which could be muxed/shared.** If that's the case, I would aim to do this:
+    | Pad | Dir    | Function                   |
+    |----:|:------:|----------------------------|
+    |   1 | Analog | analog_out                 |
+    |   2 |   Out  | hsync_n                    |
+    |   3 |   Out  | vsync_n                    |
+    |   4 |   Out  | gpout[0]                   |
+    |   5 |   Out  | gpout[1]                   |
+    |   6 |   Out  | gpout[2]                   |
+    |   7 |   Out  | tex_csb                    |
+    |   8 |   Out  | tex_sclk                   |
+    |   9 |   I/O  | tex_io[0] **(bidir)**      |
+    |  10 |    In  | tex_io[1] (MUXED/shared)   |
+    |  11 |    In  | tex_io[2] (MUXED/shared) |
+*   **If it turns out it's possible to mux 2 OUTPUTS too, I would do this**:
+    | Pad | Dir    | Function                   |
+    |----:|:------:|----------------------------|
+    |   1 | Analog | analog_out                 |
+    |   2 |   Out  | hsync_n                    |
+    |   3 |   Out  | vsync_n                    |
+    |   4 |   Out  | gpout[0]                   |
+    |   5 |   Out  | gpout[1]                   |
+    |   6 |   Out  | gpout[2]                   |
+    |   7 |   Out  | tex_csb                    |
+    |   8 |   Out  | tex_sclk                   |
+    |   9 |   I/O  | tex_io[0] **(bidir)**      |
+    |  10 |    In  | tex_io[1] (MUXED/shared)   |
+    |  11 |    In  | tex_io[2] (MUXED/shared)   |
+    |  12 |   Out  | gpout[3] (MUXED/shared)    |
+    |  13 |   Out  | gpout[4] (MUXED/shared)    |
+*   NOTE: I might decide to change `analog_out` to just another gpout. I will plan for a total of 6 in any case.
+
+## Possible sources for gpout pins
+
+*   1: Source '0' should be a different 'default' for each gpout, in case of broken LA.
+*   1: fixed high/ALT
+*   3: clk, clk/2, clk/4
+*   24: RGB
+*   6: Vec/Reg SPI signals (3 each)
+*   2: o_hblank, o_vblank
+*   1: tex_oeb
+*   3: tex_in[2:0] loopback
+*   3: mode[2:0]
+*   10: hpos bits
+*   10: vpos bits
+*   TOTAL: 64
+
+This needs a 6-bit selector (mux) per gpout.
+
+## Logic Analyser bus
+
+*   2: reset_lock_a/b
+*   36: 6x 6-bit mux selectors (for each of 6 possible gpouts).
+*   6: 2x 3-bit SPI interface inputs.
+*   1: debug_vec_overlay
+*   1: debug_map_overlay
+*   1: debug_trace_overlay
+*   TOTAL: 47 LA inputs.
+
+# Spec for Anton's design (`top_ew_algofoogle`)
+
+This is to send to Ellen and Matt.
+
+Find it here: [Spec for Anton's design (`top_ew_algofoogle`)](https://github.com/algofoogle/raybox-zero/blob/ew/doc/EWSPEC.md)
 
 
+# Mapping my top module's ports to pads
 
+*   Use another wrapper, that then names the pins/nets according to actual `mprj_io` names, inc. `oeb`s (if any)?
 
 
 # SPI glitching yesterday
@@ -323,6 +467,7 @@ It's also possible that it's the *distance* that's delayed?? In fact this seems 
 
 # Extra raybox-zero features to add before final submission
 
+*   NOTE: If we have 3 `gpout`s (general purpose, selectable outputs), we could actually use this to get 3-bit colour on one channel (or greyscale) by packing the SPI ROM appropriately, e.g. our 3-bit greyscale could be made up of `{red[1:0],blue[1]}`.
 *   Implement raybox-client.py (and de0nano wiring) support for 'SPI register access'.
 *   SPI reg: Texture address addend. One for each wall-ID-side-combo? Add 64 means we can pan thru a larger texture area if we want. Add 4096 means we shift to the next texture (might be the other side). Add 8192 means we shift to the next wall ID.
 *   SPI reg: Texture U/V slide
@@ -367,4 +512,5 @@ It's also possible that it's the *distance* that's delayed?? In fact this seems 
 
 # Notes
 
+*   Q12.12 definitely looks better!
 *   On my desktop PC I reduced my MPW8 VM to 8GB RAM because I'll do my main gutsy GDS hardens on my laptop (16~20GB).
