Update 0168 with a few more notes

--- a/0168-2023-10-28.md
+++ b/0168-2023-10-28.md
@@ -6,6 +6,12 @@
 
 # Again more prep for chipIgnite
 
+NOTE: Remember that my own [`copy_caravel_stuff.sh`](https://github.com/algofoogle/solo_squash/blob/main/caravel_stuff/copy_caravel_stuff.sh) might help us. Should we do the same [`caravel_stuff/`](https://github.com/algofoogle/solo_squash/blob/main/caravel_stuff/) structure for raybox-zero? Likewise there's the repo that I actually made using this method (I think): [solo-squash-caravel](https://github.com/algofoogle/solo-squash-caravel)
+
+Borrow *just a little* from my [solo-squash cocotb tests](https://github.com/algofoogle/solo_squash/blob/main/caravel_stuff/test_solo_squash_caravel.py) and also robojan's cocotb tests for his TT04 'Breakout' clone.
+
+Z2A MPW9 update refers to OpenLane improved checks inc. for OEB and CVC: "precheck now checks for oeb issues, includes cvc, required lvs configuration"
+
 *   Instantiate my design (top_ew_algofoogle) using SNIPPET1_NoShare
 *   Implement basic cocotb test: Wire up Texture SPI ROM (and fix QE bit); Firmware to set up GPIOs/LA and issue/release reset.
 *   Remove other tests
@@ -22,6 +28,10 @@
 
 *   VGA hmax/vmax
 *   VGA visible
+
+# Analog
+
+*   Probably need extra power nets? In UPW as well as config.tcl
 
 # Notes
 
@@ -62,3 +72,5 @@
     ```
 *   Thus, I think a GDS is the raw polygons of each layer, a DEF is the design as a hierarchical arrangement and connection of cells, and the LEF is a high-level structure used for placement and top-level routing.
 *   [Caravel Management SoC - Litex](https://caravel-mgmt-soc-litex.readthedocs.io/en/latest/)
+*   Learn more about [Wishbone](https://course.zerotoasiccourse.com/mod/lesson/view.php?id=367&pageid=590)
+*   Review udpated MPW9 Z2A course material
